# nordic25

aska_nus/: CMakeLists.txt  app.overlay  prj.conf
aska_nus/src/: aska.c  aska.h  main.c  pwm_clk.h
blinky_new_board/: CMakeLists.txt
blinky_pwm/: nrf52840dk_nrf52840.overlay
blinky_pwm/dts/bindings/: clk-out.yaml
blinky_pwm/src/: main.c
myboards/boards/nordic/devacademyl3e1/: Kconfig.devacademyl3e1  board.cmake  board.yml  devacademyl3e1-pinctrl.dtsi  devacademyl3e1.dts  devacademyl3e1.yml  devacademyl3e1_defconfig
pwm_clk/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
pwm_clk/src/: main.c  pwm_clk.c
spi_aska/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
spi_aska/dts/bindings/: aska.yaml
spi_aska/src/: aska.c  aska.h  main.c
